--- a/npcs/anastasia_dumas.yaml
+++ b/npcs/anastasia_dumas.yaml
@@ -463,20 +463,20 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills:
-    - Sorcerer Abilities:
-      - Sorcerer Spellcasting:  Sorcery Points 20, Spell DC 20
-        -  Cantrips: Fire Bolt, Mage Hand, Shocking Grasp, Minor Illusion, Message, Chill Touch
-           1st Level: Charm Person, Magic Missle, Shield, Mage Armor
-           2nd Level: Detect Thoughts, Hold Person, Scorching Ray, Shatter, Darkness
-           3rd Level: Fireball, Counterspell, Lightning Bolt, Slow, Fly, Dispel Magic, Blink
-           4th Level: Banishment, Dimension Door, Polymorph, Wall of Fire
-           5th Level: Cloudkill, Cone of Cold, Dominate Person, Teleportation Circle
-           6th Level: Chain Lightning, Disintegrate, Circle of Death, Mass Suggestion
-           7th Level: Finger of Death, Fire Storm, Plane Shift
-           8th Level: Incendiary Cloud, Earthquake, Power Word Stun
-           9th Level: Gate, Power Word Kill, Time Stop
-      - MetaMagic: You gain two of the following Metamagic Options of your choice. You gain another one at 10th and 17th level.
+    - skills:
+      - Sorcerer Abilities:
+        - Sorcerer Spellcasting:  Sorcery Points 20, Spell DC 20
+          - Cantrips: Fire Bolt, Mage Hand, Shocking Grasp, Minor Illusion, Message, Chill Touch
+            1st Level: Charm Person, Magic Missle, Shield, Mage Armor
+            2nd Level: Detect Thoughts, Hold Person, Scorching Ray, Shatter, Darkness
+            3rd Level: Fireball, Counterspell, Lightning Bolt, Slow, Fly, Dispel Magic, Blink
+            4th Level: Banishment, Dimension Door, Polymorph, Wall of Fire
+            5th Level: Cloudkill, Cone of Cold, Dominate Person, Teleportation Circle
+            6th Level: Chain Lightning, Disintegrate, Circle of Death, Mass Suggestion
+            7th Level: Finger of Death, Fire Storm, Plane Shift
+            8th Level: Incendiary Cloud, Earthquake, Power Word Stun
+            9th Level: Gate, Power Word Kill, Time Stop
+        - MetaMagic: You gain two of the following Metamagic Options of your choice. You gain another one at 10th and 17th level.
         - Empowered Spell: When you roll damage for a spell, you can spend 1 sorcery point to reroll a number of the damage dice up to your Charisma modifier (minimum of one). You must use the new rolls. You can use Empowered 
                             Spell even if you have already used a different Metamagic option during the casting of the spell.
         - Heightened Spell: When you Cast a Spell that forces a creature to make a saving throw to resist its Effects, you can spend 3 sorcery points to give one target of the spell disadvantage on its first saving throw made 
@@ -484,9 +484,9 @@ npc:
         - Subtle Spell: When you Cast a Spell, you can spend 1 sorcery point to cast it without any somatic or verbal Components
         - Twinned Spell: When you Cast a Spell that Targets only one creature and doesn’t have a range of self, you can spend a number of sorcery points equal to the spell’s level to target a second creature in range with the 
                          same spell (1 sorcery point if the spell is a cantrip)
-       - Sorcerous Restoration: you regain 4 expended sorcery points whenever you finish a Short Rest
+        - Sorcerous Restoration: you regain 4 expended sorcery points whenever you finish a Short Rest
     
-   - - Shadow Magic Abilities: 
+      - Shadow Magic Abilities: 
         - Eyes of the Dark: you have darkvision with a range of 120 feet. When you reach 3rd level in this class, you learn the Darkness spell, which doesn't count against your number of sorcerer spells known. In addition, you 
                             can cast it by spending 2 sorcery points or by expending a spell slot. If you cast it with sorcery points, you can see through the darkness created by the spell.
         - Strength of the Grave: When damage reduces you to 0 hit points, you can make a Charisma saving throw (DC 5 + the damage taken). On a success, you instead drop to 1 hit point. You can't use this feature if you are 
