--- a/npcs/Anastasia_Dumas.yaml
+++ b/npcs/Anastasia_Dumas.yaml
@@ -464,19 +464,19 @@ npc:
   #
   specialties:
   - skills:
-    - Sorcerer Abilities:
-      - Sorcerer Spellcasting:  Sorcery Points 20, Spell DC 20
-        - Cantrips: Fire Bolt, Mage Hand, Shocking Grasp, Minor Illusion, Message, Chill Touch
-          1st Level: Charm Person, Magic Missle, Shield, Mage Armor
-          2nd Level: Detect Thoughts, Hold Person, Scorching Ray, Shatter, Darkness
-          3rd Level: Fireball, Counterspell, Lightning Bolt, Slow, Fly, Dispel Magic, Blink
-          4th Level: Banishment, Dimension Door, Polymorph, Wall of Fire
-          5th Level: Cloudkill, Cone of Cold, Dominate Person, Teleportation Circle
-          6th Level: Chain Lightning, Disintegrate, Circle of Death, Mass Suggestion
-          7th Level: Finger of Death, Fire Storm, Plane Shift
-          8th Level: Incendiary Cloud, Earthquake, Power Word Stun
-          9th Level: Gate, Power Word Kill, Time Stop
-        - MetaMagic: You gain two of the following Metamagic Options of your choice. You gain another one at 10th and 17th level.
+    - - Sorcerer Abilities:
+        - - Sorcerer Spellcasting:  Sorcery Points 20, Spell DC 20
+            - Cantrips: Fire Bolt, Mage Hand, Shocking Grasp, Minor Illusion, Message, Chill Touch
+              1st Level: Charm Person, Magic Missle, Shield, Mage Armor
+              2nd Level: Detect Thoughts, Hold Person, Scorching Ray, Shatter, Darkness
+              3rd Level: Fireball, Counterspell, Lightning Bolt, Slow, Fly, Dispel Magic, Blink
+              4th Level: Banishment, Dimension Door, Polymorph, Wall of Fire
+              5th Level: Cloudkill, Cone of Cold, Dominate Person, Teleportation Circle
+              6th Level: Chain Lightning, Disintegrate, Circle of Death, Mass Suggestion
+              7th Level: Finger of Death, Fire Storm, Plane Shift
+              8th Level: Incendiary Cloud, Earthquake, Power Word Stun
+              9th Level: Gate, Power Word Kill, Time Stop
+        - - MetaMagic: You gain two of the following Metamagic Options of your choice. You gain another one at 10th and 17th level.
         - Empowered Spell: When you roll damage for a spell, you can spend 1 sorcery point to reroll a number of the damage dice up to your Charisma modifier (minimum of one). You must use the new rolls. You can use Empowered 
                             Spell even if you have already used a different Metamagic option during the casting of the spell.
         - Heightened Spell: When you Cast a Spell that forces a creature to make a saving throw to resist its Effects, you can spend 3 sorcery points to give one target of the spell disadvantage on its first saving throw made 
