--- a/npcs/Anastasia_Dumas.yaml
+++ b/npcs/Anastasia_Dumas.yaml
@@ -465,7 +465,7 @@ npc:
   specialties:
     skills:
     - Sorcerer Abilities:
-    - - Sorcerer Spellcasting:  Sorcery Points 20, Spell DC 20
+      - Sorcerer Spellcasting:  Sorcery Points 20, Spell DC 20
         - Cantrips: Fire Bolt, Mage Hand, Shocking Grasp, Minor Illusion, Message, Chill Touch
           1st Level: Charm Person, Magic Missle, Shield, Mage Armor
           2nd Level: Detect Thoughts, Hold Person, Scorching Ray, Shatter, Darkness
@@ -476,7 +476,7 @@ npc:
           7th Level: Finger of Death, Fire Storm, Plane Shift
           8th Level: Incendiary Cloud, Earthquake, Power Word Stun
           9th Level: Gate, Power Word Kill, Time Stop
-        - MetaMagic: You gain two of the following Metamagic Options of your choice. You gain another one at 10th and 17th level.
+        MetaMagic: You gain two of the following Metamagic Options of your choice. You gain another one at 10th and 17th level.
         - Empowered Spell: When you roll damage for a spell, you can spend 1 sorcery point to reroll a number of the damage dice up to your Charisma modifier (minimum of one). You must use the new rolls. You can use Empowered 
                             Spell even if you have already used a different Metamagic option during the casting of the spell.
         - Heightened Spell: When you Cast a Spell that forces a creature to make a saving throw to resist its Effects, you can spend 3 sorcery points to give one target of the spell disadvantage on its first saving throw made 
@@ -486,26 +486,26 @@ npc:
                          same spell (1 sorcery point if the spell is a cantrip)
         - Sorcerous Restoration: you regain 4 expended sorcery points whenever you finish a Short Rest
     
-    - - Shadow Magic Abilities: 
-        - Eyes of the Dark: you have darkvision with a range of 120 feet. When you reach 3rd level in this class, you learn the Darkness spell, which doesn't count against your number of sorcerer spells known. In addition, you 
-                            can cast it by spending 2 sorcery points or by expending a spell slot. If you cast it with sorcery points, you can see through the darkness created by the spell.
-        - Strength of the Grave: When damage reduces you to 0 hit points, you can make a Charisma saving throw (DC 5 + the damage taken). On a success, you instead drop to 1 hit point. You can't use this feature if you are 
-                                 reduced to 0 hit points by radiant damage or by a critical hit. After the saving throw succeeds, you can't use this feature again until you finish a long rest.
-        - Hound of Ill Omen: you gain the ability to call forth a howling creature of darkness to harass your foes. As a bonus action, you can spend 3 sorcery points to summon a hound of ill omen to target one creature you can 
-                             see within 120 feet of you. The hound uses the dire wolf’s statistics, with the following changes - 
-                             - The hound is size Medium, not Large, and it counts as a monstrosity, not a beast.
-                             - It appears with a number of temporary hit points equal to half your sorcerer level.
-                             - It can move through other creatures and objects as if they were difficult terrain. The hound takes 5 force damage if it ends its turn inside an object.
-                             - At the start of its turn, the hound automatically knows its target’s location. If the target was hidden, it is no longer hidden from the hound.
-                             The hound appears in an unoccupied space of your choice within 30 feet of the target. Roll initiative for the hound. On its turn, it can move only toward its target by the most direct route, and it 
-                             can use its action only to attack its target. The hound can make opportunity attacks, but only against its target. Additionally, while the hound is within 5 feet of the target, the target has 
-                             disadvantage on saving throws against any spell you cast. The hound disappears if it is reduced to 0 hit points, if its target is reduced to 0 hit points, or after 5 minutes.
-        - Shadow Walk: you gain the ability to step from one shadow into another. When you are in dim light or darkness, as a bonus action, you can teleport up to 120 feet to an unoccupied space you can see that is also in dim 
-                       light or darkness.
-        - Umbral Form: you can spend 6 sorcery points as a bonus action to transform yourself into a shadowy form. In this form, you have resistance to all damage except force and radiant damage, and you can move through other 
-                       creatures and objects as if they were difficult terrain. You take 5 force damage if you end your turn inside an object. You remain in this form for 1 minute. It ends early if you are incapacitated, if you 
-                       die, or if you dismiss it as a bonus action
-        - Shadow Sorcerer Quirks: When you are asleep, you don't appear to breathe (though you must still breathe to survive)
+    - Shadow Magic Abilities: 
+      - Eyes of the Dark: you have darkvision with a range of 120 feet. When you reach 3rd level in this class, you learn the Darkness spell, which doesn't count against your number of sorcerer spells known. In addition, you 
+                          can cast it by spending 2 sorcery points or by expending a spell slot. If you cast it with sorcery points, you can see through the darkness created by the spell.
+      - Strength of the Grave: When damage reduces you to 0 hit points, you can make a Charisma saving throw (DC 5 + the damage taken). On a success, you instead drop to 1 hit point. You can't use this feature if you are 
+                               reduced to 0 hit points by radiant damage or by a critical hit. After the saving throw succeeds, you can't use this feature again until you finish a long rest.
+      - Hound of Ill Omen: you gain the ability to call forth a howling creature of darkness to harass your foes. As a bonus action, you can spend 3 sorcery points to summon a hound of ill omen to target one creature you can 
+                           see within 120 feet of you. The hound uses the dire wolf’s statistics, with the following changes - 
+                           - The hound is size Medium, not Large, and it counts as a monstrosity, not a beast.
+                           - It appears with a number of temporary hit points equal to half your sorcerer level.
+                           - It can move through other creatures and objects as if they were difficult terrain. The hound takes 5 force damage if it ends its turn inside an object.
+                           - At the start of its turn, the hound automatically knows its target’s location. If the target was hidden, it is no longer hidden from the hound.
+                           The hound appears in an unoccupied space of your choice within 30 feet of the target. Roll initiative for the hound. On its turn, it can move only toward its target by the most direct route, and it 
+                           can use its action only to attack its target. The hound can make opportunity attacks, but only against its target. Additionally, while the hound is within 5 feet of the target, the target has 
+                           disadvantage on saving throws against any spell you cast. The hound disappears if it is reduced to 0 hit points, if its target is reduced to 0 hit points, or after 5 minutes.
+      - Shadow Walk: you gain the ability to step from one shadow into another. When you are in dim light or darkness, as a bonus action, you can teleport up to 120 feet to an unoccupied space you can see that is also in dim 
+                     light or darkness.
+      - Umbral Form: you can spend 6 sorcery points as a bonus action to transform yourself into a shadowy form. In this form, you have resistance to all damage except force and radiant damage, and you can move through other 
+                     creatures and objects as if they were difficult terrain. You take 5 force damage if you end your turn inside an object. You remain in this form for 1 minute. It ends early if you are incapacitated, if you 
+                     die, or if you dismiss it as a bonus action
+      - Shadow Sorcerer Quirks: When you are asleep, you don't appear to breathe (though you must still breathe to survive)
     
     special-abilities: 
       - Legendary Resistance: (3/Day), If Anastasia Dumas fails a saving throw she can choose to succeed instead 
