--- a/npcs/Anastasia_Dumas.yaml
+++ b/npcs/Anastasia_Dumas.yaml
@@ -465,7 +465,7 @@ npc:
   specialties:
     skills:
     - Sorcerer Abilities:
-      - Sorcerer Spellcasting:
+      - Sorcerer Spellcasting (Sorcery Points 20, Spell DC 20):
         - Cantrips: Fire Bolt, Mage Hand, Shocking Grasp, Minor Illusion, Message, Chill Touch
           1st Level: Charm Person, Magic Missle, Shield, Mage Armor
           2nd Level: Detect Thoughts, Hold Person, Scorching Ray, Shatter, Darkness
@@ -476,13 +476,14 @@ npc:
           7th Level: Finger of Death, Fire Storm, Plane Shift
           8th Level: Incendiary Cloud, Earthquake, Power Word Stun
           9th Level: Gate, Power Word Kill, Time Stop
-        MetaMagic: You gain two of the following Metamagic Options of your choice. You gain another one at 10th and 17th level.
-        - Empowered Spell: When you roll damage for a spell, you can spend 1 sorcery point to reroll a number of the damage dice up to your Charisma modifier (minimum of one). You must use the new rolls. You can use Empowered 
-                            Spell even if you have already used a different Metamagic option during the casting of the spell.
-        - Heightened Spell: When you Cast a Spell that forces a creature to make a saving throw to resist its Effects, you can spend 3 sorcery points to give one target of the spell disadvantage on its first saving throw made 
+        MetaMagic:
+        - You gain two of the following Metamagic Options of your choice. You gain another one at 10th and 17th level.
+          Empowered Spell: When you roll damage for a spell, you can spend 1 sorcery point to reroll a number of the damage dice up to your Charisma modifier (minimum of one). You must use the new rolls. You can use Empowered 
+                           Spell even if you have already used a different Metamagic option during the casting of the spell.
+          Heightened Speell: When you Cast a Spell that forces a creature to make a saving throw to resist its Effects, you can spend 3 sorcery points to give one target of the spell disadvantage on its first saving throw made 
                             against the spell.
-        - Subtle Spell: When you Cast a Spell, you can spend 1 sorcery point to cast it without any somatic or verbal Components
-        - Twinned Spell: When you Cast a Spell that Targets only one creature and doesn’t have a range of self, you can spend a number of sorcery points equal to the spell’s level to target a second creature in range with the 
+          Subtle Spell: When you Cast a Spell, you can spend 1 sorcery point to cast it without any somatic or verbal Components
+          eTwinned Spell: When you Cast a Spell that Targets only one creature and doesn’t have a range of self, you can spend a number of sorcery points equal to the spell’s level to target a second creature in range with the 
                          same spell (1 sorcery point if the spell is a cantrip)
         - Sorcerous Restoration: you regain 4 expended sorcery points whenever you finish a Short Rest
     
